--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">PathGuide</string>
+    <string name="pick_destination_label">Por favor, seleccione el destino.</string>
 </resources>
