--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">PathGuide</string>
-    <string name="pick_destination_label">Por favor, seleccione el destino.</string>
+    <string name="pick_destination_label">Seleccione el destino</string>
+
+    <string name="select_destination_dialog">Quieres ir a {{destination}}?</string>
+
 </resources>
