Move loadMap url to strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="current_location_cancel">Cancelar viaje</string>
 
     <string name="current_location_cancel_confirm">Está seguro que desea cancelar el viaje?</string>
+
+    <string name="load_map_url">https://api.myjson.com/bins/qa0ds</string>
 </resources>
