--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,5 @@
 
     <string name="current_location_cancel_confirm">Está seguro que desea cancelar el viaje?</string>
 
-    <string name="load_map_url">https://api.myjson.com/bins/qa0ds</string>
+    <string name="load_map_url">https://api.myjson.com/bins/zr3bg</string>
 </resources>
